Fixes #37. CreateFAB now only hides automatically on mobile.

--- a/app/client/templates/common/createFAB/createFAB.css
+++ b/app/client/templates/common/createFAB/createFAB.css
@@ -2,6 +2,9 @@
 	transition: all 0.3s ease-in-out;
 }
 
-.createFAB #createFAB.hidden {
-	bottom: -60px;
+
+@media only screen and (max-width: 600px) {
+	.createFAB #createFAB.hidden {
+		bottom: -60px;
+	}
 }
